Changed bower.json to add angular

--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,8 @@
     "buongiorno"
   ],
   "license": "MIT",
-  "ignore": []
+  "ignore": [],
+  "dependencies": {
+    "angular": "1.2.16"
+  }
 }
