--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "ignore": [],
   "dependencies": {
-    "angular": ">= 1.2.16"
+    "angular": ">= 1.2.16",
+    "angular-route": "1.2.16"
   }
 }
