--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
   "license": "MIT",
   "ignore": [],
   "dependencies": {
-    "angular": ">= 1.2.16",
+    "angular": ">= 1.2.16"
+  },
+  "devDependencies": {
     "angular-route": "1.2.16"
   }
 }
