--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "dependencies": {},
   "repository": {},
   "devDependencies": {
-    "grunt": "^0.4.5"
+    "grunt": "^0.4.5",
+    "grunt-contrib-connect": "^0.10.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-open": "^0.2.3",
+    "grunt-serve": "^0.1.6",
+    "load-grunt-tasks": "^3.2.0"
   },
   "engines": {
     "node": "0.10.25"
