Added js object as storage type

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "barney",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "authors": [
     "roberto.bon@buongiorno.com",
     "aurelio.merenda@buongiorno.com"
@@ -26,7 +26,7 @@
     "modules/utility/utility.mod.js",
     "modules/utility/utility.ser.js",
     "modules/storage/storage.mod.js",
-    "modules/storage/storage.ser.js"
+    "modules/storage/storage.pro.js"
   ],
   "moduleType": [
     "globals"
