--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "barney",
-  "version": "0.9.4",
+  "version": "0.10.0",
   "authors": [
     "roberto.bon@buongiorno.com",
     "aurelio.merenda@buongiorno.com"
@@ -26,7 +26,9 @@
     "modules/utility/utility.mod.js",
     "modules/utility/utility.ser.js",
     "modules/storage/storage.mod.js",
-    "modules/storage/storage.pro.js"
+    "modules/storage/storage.pro.js",
+    "modules/stargate/stargate.mod.js",
+    "modules/stargate/stargate.pro.js"
   ],
   "moduleType": [
     "globals"
@@ -37,9 +39,11 @@
   "license": "MIT",
   "ignore": [],
   "dependencies": {
-    "angular": ">= 1.2.16"
+    "angular": ">=1.2.16"
   },
   "devDependencies": {
-    "angular-route": ">= 1.2.16"
+    "angular": ">=1.2.16",
+    "angular-route": ">=1.2.16",
+    "stargateJs": "git+https://bitbucket.org/ibridi/stargatejs-wa#0.0.1"
   }
 }
