--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "dependencies": {},
   "repository": {},
   "devDependencies": {
+    "babel-eslint": "^4.1.4",
+    "eslint-config-airbnb": "^0.1.0",
+    "eslint-config-angular": "^0.4.0",
+    "eslint-plugin-angular": "^0.13.0",
+    "eslint-plugin-react": "^3.7.1",
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-eslint": "^17.3.1",
     "grunt-open": "^0.2.3",
     "grunt-serve": "^0.1.6",
     "load-grunt-tasks": "^3.2.0"
