--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^17.3.1",
+    "grunt-karma": "^0.12.1",
     "grunt-open": "^0.2.3",
     "grunt-serve": "^0.1.6",
-    "load-grunt-tasks": "^3.2.0"
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.15",
+    "karma-coverage": "^0.5.3",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "load-grunt-tasks": "^3.2.0",
+    "phantomjs": "^1.9.18"
   },
   "engines": {
     "node": "0.10.25"
