Integrated new config module

--- a/.eslintrc
+++ b/.eslintrc
@@ -43,6 +43,7 @@
 		"no-trailing-spaces": 0,
 		// blocks could be padded by blank lines
 		"padded-blocks": [0, "never"],
+		"no-use-before-define": 0,
 
 		/*** ANGULAR ***/
 		// limit component for page to 1
@@ -72,42 +73,41 @@
 		"angular/no-service-method": 2,
 
 		"angular/angularelement": 0,
-	    "angular/controller-as": 0,
-	    "angular/controller-as-route": 0,
-	    "angular/controller-as-vm": [0, "vm"],
-	    "angular/deferred": 0,
-	    "angular/definedundefined": 0,
-	    "angular/di": [0, "function"],
-	    "angular/di-order": [0, true],
-	    "angular/directive-name": 0,
-	    "angular/component-limit": [0, 0],
-	    "angular/document-service": 0,
-	    "angular/empty-controller": 0,
-	    "angular/file-name": 0,
-	    "angular/filter-name": 0,
-	    "angular/foreach": 0,
-	    "angular/json-functions": 0,
-	    "angular/log": 0,
-	    "angular/module-name": 0,
-	    "angular/module-setter": 0,
-	    "angular/no-angular-mock": 0,
-	    "angular/no-controller": 0,
-	    "angular/no-cookiestore": 0,
-	    "angular/no-jquery-angularelement": 0,
-	    "angular/no-private-call": 0,
-	    "angular/no-service-method": 0,
-	    "angular/no-services": [0, ["$http", "$resource", "Restangular"]],
-	    "angular/on-watch": 0,
-	    "angular/rest-service": 0,
-	    "angular/typecheck-array": 0,
-	    "angular/typecheck-date": 0,
-	    "angular/typecheck-function": 0,
-	    "angular/typecheck-number": 0,
-	    "angular/typecheck-object": 0,
-	    "angular/typecheck-regexp": 0,
-	    "angular/typecheck-string": 0,
-	    "angular/watchers-execution": [0, "$digest"],
-	    "angular/window-service": 0,
-	    "no-use-before-define": 0
+		"angular/controller-as": 0,
+		"angular/controller-as-route": 0,
+		"angular/controller-as-vm": [0, "vm"],
+		"angular/deferred": 0,
+		"angular/definedundefined": 0,
+		"angular/di": [0, "function"],
+		"angular/di-order": [0, true],
+		"angular/directive-name": 0,
+		"angular/component-limit": [0, 0],
+		"angular/document-service": 0,
+		"angular/empty-controller": 0,
+		"angular/file-name": 0,
+		"angular/filter-name": 0,
+		"angular/foreach": 0,
+		"angular/json-functions": 0,
+		"angular/log": 0,
+		"angular/module-name": 0,
+		"angular/module-setter": 0,
+		"angular/no-angular-mock": 0,
+		"angular/no-controller": 0,
+		"angular/no-cookiestore": 0,
+		"angular/no-jquery-angularelement": 0,
+		"angular/no-private-call": 0,
+		"angular/no-service-method": 0,
+		"angular/no-services": [0, ["$http", "$resource", "Restangular"]],
+		"angular/on-watch": 0,
+		"angular/rest-service": 0,
+		"angular/typecheck-array": 0,
+		"angular/typecheck-date": 0,
+		"angular/typecheck-function": 0,
+		"angular/typecheck-number": 0,
+		"angular/typecheck-object": 0,
+		"angular/typecheck-regexp": 0,
+		"angular/typecheck-string": 0,
+		"angular/watchers-execution": [0, "$digest"],
+		"angular/window-service": 0
 	}
 }
