--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^17.3.1",
     "grunt-karma": "^0.12.1",
+    "grunt-ngdocs": "^0.2.9",
     "grunt-open": "^0.2.3",
     "grunt-serve": "^0.1.6",
     "jasmine-core": "^2.3.4",
