--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "eslint-plugin-angular": "^0.13.0",
     "eslint-plugin-react": "^3.7.1",
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^17.3.1",
     "grunt-karma": "^0.12.1",
-    "grunt-ngdocs": "^0.2.9",
+    "grunt-ngdocs": "^0.2.5",
     "grunt-open": "^0.2.3",
     "grunt-serve": "^0.1.6",
     "jasmine-core": "^2.3.4",
