Grunt version start

--- a/bower.json
+++ b/bower.json
@@ -3,40 +3,12 @@
   "version": "1.0.0",
   "authors": [
     "aurelio.merenda@buongiorno.com",
-    "fabio.fognani@buongiorno.com"
+    "fabio.fognani@buongiorno.com",
+    "lorenzo.mussi@buongiorno.com",
+    "flavia.calzecchi@buongiorno.com"
   ],
   "description": "Common lib for Buongiorno products",
-  "main": [
-    "modules/config/config.mod.js",
-    "modules/config/config.pro.js",
-    "modules/config/config.fil.js",
-    "modules/logger/logger.mod.js",
-    "modules/logger/logger.ser.js",
-    "modules/dict/dict.mod.js",
-    "modules/dict/dict.pro.js",
-    "modules/dict/dict.fil.js",
-    "modules/dict/dict.dir.js",
-    "modules/analytics/analytics.mod.js",
-    "modules/analytics/analytics.ser.js",
-    "modules/newton/newton.mod.js",
-    "modules/newton/newton.ser.js",
-    "modules/meta/meta.mod.js",
-    "modules/meta/meta.ser.js",
-    "modules/utility/utility.mod.js",
-    "modules/utility/utility.ser.js",
-    "modules/storage/storage.mod.js",
-    "modules/storage/storage-subset.mod.js",
-    "modules/storage/storage.pro.js",
-    "modules/storage/chicken.pro.js",
-    "modules/storage/depot.pro.js",
-    "modules/storage/biscuit.pro.js",
-    "modules/stargate/stargate.mod.js",
-    "modules/stargate/stargate.pro.js",
-    "modules/callbacky/callbacky.mod.js",
-    "modules/callbacky/callbacky.pro.js",
-    "modules/history/history.mod.js",
-    "modules/history/history.ser.js"
-  ],
+  "main": [],
   "moduleType": [
     "globals"
   ],
