--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "grunt-karma": "^0.12.1",
     "grunt-ngdocs": "^0.2.5",
     "grunt-open": "^0.2.3",
+    "grunt-prompt": "^1.3.3",
     "grunt-serve": "^0.1.6",
+    "grunt-string-replace": "^1.2.1",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.15",
     "karma-coverage": "^0.5.3",
