--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "barney",
-  "version": "2.0.0",
+  "version": "1.1.0",
   "authors": [
     "aurelio.merenda@buongiorno.com",
     "fabio.fognani@buongiorno.com",
@@ -16,14 +16,19 @@
     "buongiorno"
   ],
   "license": "MIT",
-  "ignore": [],
+  "ignore": [
+    "**/*",
+    "!modules/**/*",
+    "!CHANGELOG",
+    "!README",
+    "!bower.json"
+  ],
   "dependencies": {
     "angular": ">=1.2.16"
   },
   "devDependencies": {
-    "angular": ">=1.2.16",
-    "angular-route": ">=1.2.16",
-    "stargateJs": "git+https://bitbucket.org/ibridi/stargatejs-wa#0.1.0",
-    "angular-mocks": "~1.4.7"
+    "angular": "1.4.7",
+    "angular-route": "1.4.7",
+    "angular-mocks": "1.4.7"
   }
 }
