--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^17.3.1",
+    "grunt-file-append": "0.0.6",
     "grunt-karma": "^0.12.1",
     "grunt-ngdocs": "^0.2.5",
     "grunt-open": "^0.2.3",
