--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,14 @@ language: node_js
 node_js:
   - "4"
 
+#branches:
+#  only:
+#    - master
+#    - develop
+
 install:
   - npm install
-  - npm install -g bower
-  - npm install -g grunt
+  - npm install -g bower grunt
   - bower install
 
 script:
