--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-coveralls": "^1.0.0",
     "grunt-eslint": "^17.3.1",
     "grunt-file-append": "0.0.6",
     "grunt-karma": "^0.12.1",
@@ -25,6 +26,7 @@
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.15",
     "karma-coverage": "^0.5.3",
+    "karma-coveralls": "^1.1.2",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "load-grunt-tasks": "^3.2.0",
