--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-prompt": "^1.3.3",
     "grunt-serve": "^0.1.6",
     "grunt-string-replace": "^1.2.1",
+    "grunt-stripcomments": "^0.5.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.15",
     "karma-coverage": "^0.5.3",
