Deleted live-js and live-script directive, now use require on live-html

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,8 @@
 		"no-param-reassign": 1,
 		// you can use "else" after a return
 		"no-else-return": 0,
+		// you can create new anonymous function with "new Function(...)"
+		"no-new-func": 0,
 
 		/*** SPACES ***/
 		// indent 4 spaces
