--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
   "dependencies": {},
   "devDependencies": {
     "babel-eslint": "^6.1.0",
-    "eslint-config-airbnb": "^9.0.1",
+    "eslint": "^9.0.1",
+    "eslint": "^2.9.0",
     "eslint-config-angular": "^0.5.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-import": "^1.7.0",
     "eslint-plugin-angular": "^1.3.0",
     "eslint-plugin-react": "^5.2.2",
     "grunt": "^0.4.5",
@@ -47,8 +50,8 @@
     "grunt-string-replace": "^1.2.1",
     "grunt-stripcomments": "^0.6.0",
     "jasmine-core": "^2.3.4",
-    "karma": "^1.1.0",
-    "karma-coverage": "^1.0.0",
+    "karma": "^1.1.1",
+    "karma-coverage": "^1.1.0",
     "karma-coveralls": "^1.1.2",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
