--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "grunt-open": "^0.2.3",
     "grunt-prompt": "^1.3.3",
     "grunt-serve": "^0.1.6",
+    "grunt-shell": "^1.3.0",
     "grunt-string-replace": "^1.2.1",
     "grunt-stripcomments": "^0.5.0",
     "jasmine-core": "^2.3.4",
