--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {},
   "devDependencies": {
     "babel-eslint": "^6.1.1",
+    "dml-js-boilerplate": "^2.0.0",
     "eslint-config-airbnb": "^0.1.0",
     "eslint-config-angular": "^0.4.0",
     "eslint-plugin-angular": "^0.13.0",
