--- a/package.json
+++ b/package.json
@@ -26,36 +26,10 @@
   "homepage": "https://github.com/D-Mobilelab/barney#readme",
   "dependencies": {},
   "devDependencies": {
-    "babel-eslint": "^6.1.1",
     "dml-js-boilerplate": "~2.1.0",
-    "eslint-config-airbnb": "^0.1.0",
     "eslint-config-angular": "^0.4.0",
     "eslint-plugin-angular": "^1.3.1",
-    "eslint-plugin-react": "^5.2.2",
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.7.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-connect": "^0.10.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-coveralls": "^1.0.0",
-    "grunt-eslint": "^17.3.1",
-    "grunt-file-append": "0.0.6",
-    "grunt-karma": "^0.12.1",
-    "grunt-ngdocs": "^0.2.5",
-    "grunt-open": "^0.2.3",
-    "grunt-prompt": "^1.3.3",
-    "grunt-serve": "^0.1.6",
-    "grunt-shell": "^1.3.0",
-    "grunt-string-replace": "^1.3.0",
-    "grunt-stripcomments": "^0.5.0",
-    "jasmine-core": "^2.3.4",
-    "karma": "^1.1.2",
-    "karma-coverage": "^1.1.0",
-    "karma-coveralls": "^1.1.2",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "load-grunt-tasks": "^3.2.0",
-    "phantomjs": "^1.9.18"
+    "grunt-contrib-concat": "^0.5.1"
   },
   "engines": {
     "node": "0.10.25"
