--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,11 @@
+sudo: false
 language: node_js
-
 node_js:
-  - "4"
-
-branches:
- only:
-   - master
-
-before_install:
-  - npm install -g bower 
-  - npm install -g grunt
-  - npm install -g npm@3
-  - npm -v
-  - node -v
-
-install:
-  - npm install
-  - bower install
-
-after_install:
-  - ls -la node_modules/ 
-
+  - '6'
+  - '5'
+  - '4'
 script:
-  - grunt travis -v
+  - npm run lint
+  # - npm run test:cover
+# after_success:
+  # - npm run coveralls
