--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/D-Mobilelab/barney#readme",
   "dependencies": {
+    "angular": "^1.6.8"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
