--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "sinon": "^2.0.0-pre.3"
   },
   "scripts": {
-    "lint": "eslint src test tools",
+    "lint": "eslint src",
     "test": "mocha --compilers js:babel-register",
     "test:watch": "mocha --compilers js:babel-register --reporter min --watch",
     "test:cover": "babel-node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha",
@@ -67,7 +67,6 @@
     ]
   },
   "eslintConfig": {
-    "parser": "babel-eslint",
-    "extends": "airbnb-base"
+    "parser": "babel-eslint"
   }
 }
